# model-storehouse

./: .gitignore  README.md
.circleci/: config.yml
model_abc/: pyproject.toml
model_abc/code/: predict.py
model_abc/data/: bert_wp_tok_updated.joblib
model_abc/model_abc/: predict.py
model_autoadj_A/: pyproject.toml
model_autoadj_A/model_autoadj_A/: model_a_artifact.pkl  predict.py
model_autoadj_B/: pyproject.toml
model_autoadj_B/model_autoadj_B/: model_b_artifact.pkl  predict.py
model_bridging/: helpers.py  pyproject.toml
model_bridging/model_bridging/: helpers.py  predict.py  predict_single_row.py
model_corie/: pyproject.toml
model_corie/model_corie/: helpers0.py  predict.py
model_corie/model_corie/data/: corie_model_spr_bz__comp__aefb8f7c-d2a2-47a3-adde-12724ac2de78.joblib  corie_template_data_spr_bz__comp__aefb8f7c-d2a2-47a3-adde-12724ac2de78.csv
model_ffm/: model_card.md  pyproject.toml
model_ffm/model_ffm/: predict.py
model_ffm/model_ffm/data/: MLM_config.json  bert_wp_tok_updated.joblib  bert_wp_tok_updated_v2.joblib  entity_dict3.3.1.pkl  ffm_model_torch_v2.2.1.onnx  ffm_model_torch_v2.4.6.onnx  ffm_model_torch_v3.0.0.onnx  ffm_model_torch_v3.1.0.onnx  ffm_model_torch_v3.2.0.onnx  ffm_model_torch_v3.3.0.onnx  ffm_model_torch_v3.3.1.onnx  head_dict2.4.6.pkl  head_dict3.3.0.pkl  head_dict3.3.1.pkl  p2_tokenizer_BERT_WP_v2.2.1.joblib  prod_dict2.4.6.pkl  prod_dict3.1.0.pkl  softmax_v3.1.0.onnx  tokenzier_v2.4.6.joblib  tokenzier_v3.0.0.joblib  tokenzier_v3.1.0.joblib  tokenzier_v3.2.0.joblib  tokenzier_v3.3.0.joblib  tokenzier_v3.3.1.joblib
model_ffm/model_ffm/tests/: conftest.py  pred_out.joblib  test_predict.py
model_ffm/model_ffm/tests/assets/: predict_out_sample.joblib
model_legal_discovery/: pyproject.toml
model_legal_discovery/model_legal_discovery/: predict.py
model_ltd/: pyproject.toml
model_ltd/model_ltd/: helpers.py  predict.py
model_ltd_segmentation/: pyproject.toml
model_ltd_segmentation/model_ltd_segmentation/: predict.py
model_ltd_segmentation/model_ltd_segmentation/data/: data.csv  data_template.csv  dtype_template.pkl  embedding_matrix_code_2023_11_11.pkl  scaler_obj_2023_11_11.pkl  tokenizer_code_2023_11_11.pkl  tokenizer_desc_2023_11_11.pkl
model_ner/: pyproject.toml
model_ner/model_ner/: helpers.py  predict.py
model_ner/model_ner/data/: meta.json
model_ner/model_ner/data/ner/: cfg  model  moves
model_ner/model_ner/data/vocab/: strings.json
model_settlement/: pyproject.toml
model_settlement/model_settlement/: helpers.py  predict.py
model_settlement/model_settlement/data/: settlement_labels.csv
model_siu/: pyproject.toml
model_siu/model_siu/: helpers.py  predict_appn_ops.py  predict_appn_siu.py  predict_txn_ops.py  predict_txn_siu.py
model_siu/model_siu/artifacts/datasets/: appn_agent_df_mod.csv  appn_employee_df_mod.csv  issue_ops_post_template_1.csv  issue_ops_select_template_1.csv  issue_siu_post_template_1.csv  issue_siu_select_template_1.csv  transaction_ops_post_template_1.csv  transaction_ops_select_template_1.csv  transaction_siu_post_template_1.csv  transaction_siu_select_template_1.csv  triple_merge.csv  txn_agent_df_mod.csv  txn_employee_df_mod.csv
model_siu/model_siu/artifacts/models/: Issue_ops_v3.sav  Issue_siu_v3.sav  transaction_ops_v3.sav
model_siu_appn/: model_card.md  pyproject.toml
model_siu_appn/model_siu_appn/: predict.py
model_siu_txn/: model_card.md  pyproject.toml
model_siu_txn/model_siu_txn/: predict.py
model_std/: pyproject.toml
model_std/model_std/: helpers.py  predict.py
model_std_segmentation/: pyproject.toml
model_std_segmentation/model_std_segmentation/: .pre-commit-config.yaml  helpers.py  predict.py
