[tool.poetry]
name = "model_autoadj_B"
version = "0.1.0"
description = "Model Autoadjudication B"
authors = ["Tariq Mohamed <tariq.mohamed@fineos.com>"]
maintainers = [
    "Tariq Mohamed<tariq.mohamed@fineos.com>",
]
license = "Proprietary"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "model_autoadj_B" }
]

[tool.poetry.dependencies]
python = "^3.8"
xgboost = "~1.7"
pandas = "~2.0"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
