[tool.poetry]
name = "model_bridging"
version = "0.1.0"
description = "Model Bridging"
authors = ["Teja <teja@spraoi.ai>"]
maintainers = [
    "TBD <TBD@spraoi.ai>",
]
license = "Proprietary"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "model_bridging" }
]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "~3.5"
pandas = "~1.2"
numpy = "~1.18"
joblib = "~0.14"
boto3 = "~1.17"
scikit-learn = "~0.24"
s3fs = "~2021.6"
catboost = "~0.26"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
