[tool.poetry]
name = "model_bridging"
version = "0.1.1"
description = "Model Bridging"
authors = ["Teja <teja@spraoi.ai>"]
maintainers = [
    "TBD <TBD@spraoi.ai>",
]
license = "Proprietary"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "model_bridging" }
]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "~3.7"
pandas = "~1.4"
numpy = "~1.22"
joblib = "~0.14"
boto3 = "~1.19"
scikit-learn = "~0.24"
s3fs = "~2021.6"
catboost = "~1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
