[tool.poetry]
name = "model_bridging"
version = "0.1.2"
description = "Model Bridging"
authors = ["Teja <teja@spraoi.ai>"]
maintainers = [
    "TBD <TBD@spraoi.ai>",
]
license = "Proprietary"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "model_bridging" }
]

[tool.poetry.dependencies]
python = "^3.8"
# Pinned versions used to improve performance of creating the virtual env (pip resolver is slow AF)
aiobotocore = "2.2.0"
aiohttp = "3.8.1"
aioitertools = "0.10.0"
aiosignal = "1.2.0"
async-timeout = "4.0.2"
attrs = "21.4.0"
boto3 = "1.21.21"
botocore = "1.24.21"
catboost = "1.0.5"
charset-normalizer = "2.0.12"
click = "8.1.3"
colorama = "0.4.4"
cycler = "0.11.0"
fonttools = "4.33.3"
frozenlist = "1.3.0"
fsspec = "2022.3.0"
graphviz = "0.20"
idna = "3.3"
jmespath = "1.0.0"
joblib = "1.1.0"
kiwisolver = "1.4.2"
matplotlib = "3.5.2"
multidict = "6.0.2"
nltk = "3.7"
numpy = "1.22.3"
packaging = "21.3"
pandas = "1.4.2"
pillow = "9.1.0"
plotly = "5.7.0"
pyparsing = "3.0.8"
python-dateutil = "2.8.2"
pytz = "2022.1"
regex = "2022.4.24"
s3fs = "2022.3.0"
s3transfer = "0.5.2"
scikit-learn = "1.0.2"
scipy = "1.6.1"
setuptools-scm = "6.4.2"
six = "1.16.0"
tenacity = "8.0.1"
threadpoolctl = "3.1.0"
tomli = "2.0.1"
tqdm = "4.64.0"
typing-extensions = "4.2.0"
urllib3 = "1.26.9"
wrapt = "1.14.1"
yarl = "1.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
