[tool.poetry]
name = "model_ffm"
version = "3.1.0"
description = "Model FFM"
authors = ["Tariq <tariqmohamed@fineos.com>"]
maintainers = [
    "Tariq <tariqmohamed@fineos.com>",
]
license = "Proprietary"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "model_ffm" }
]
include = ["model_ffm/data/*"]

[tool.poetry.dependencies]
python = "^3.8"
onnxruntime = "1.13.1"
numpy = "~1.23"
inflection = "~0.5"
joblib = "~1.2"
tokenizers = "~0.13"
werkzeug = "0.*"

[tool.poetry.dev-dependencies]
pytest = '~7.3'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
