[tool.poetry]
name = "model_ffm"
version = "3.3.1"
description = "Model FFM"
authors = ["Tariq <tariqmohamed@fineos.com>"]
maintainers = [
    "Tariq <tariqmohamed@fineos.com>",
]
license = "Proprietary"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "model_ffm" }
]
include = ["model_ffm/data/*"]

[tool.poetry.dependencies]
python = "^3.8"
onnxruntime = "1.19.2"
numpy = "~1.24"
inflection = "~0.5"
joblib = "~1.4"
tokenizers = "~0.20"
werkzeug = "3.*"

[tool.poetry.dev-dependencies]
pytest = '~7.3'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
