[tool.poetry]
name = "model_legal_discovery"
version = "0.1.0"
description = "Model Legal Discovery"
authors = ["Jason DeCorte <Jason.DeCorte@FINEOS.com>"]
packages = [
    { include = "model_legal_discovery" }
]
include = [
    "model_legal_discovery/nltk_data/*",
    "model_legal_discovery/transformers/*",
]

[tool.poetry.dependencies]
python = "^3.8"
click = ">=7.1,<7.2"
spacy = "*"
torch = "*"
PyPDF2 = "*"
transformers = "*"
nltk = "*"
sklearn = "*"
alt_profanity_check = "*"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
