[tool.poetry]
name = "model_legal_discovery"
version = "0.1.2"
description = "Model Legal Discovery"
authors = ["Jason DeCorte <Jason.DeCorte@FINEOS.com>"]
packages = [
    { include = "model_legal_discovery" }
]
include = [
    "model_legal_discovery/nltk_data/*"
]

[tool.poetry.dependencies]
python = "^3.8"
alt-profanity-check = "1.1.1"
blis = "0.7.7"
boto3 = "1.24.14"
botocore = "1.27.14"
catalogue = "2.0.7"
certifi = "2022.6.15"
charset-normalizer = "2.0.12"
click = "8.0.4"
colorama = "0.4.5"
cymem = "2.0.6"
filelock = "3.7.1"
huggingface-hub = "0.8.1"
idna = "3.3"
jinja2 = "3.1.2"
jmespath = "1.0.1"
joblib = "1.1.0"
markupsafe = "2.1.1"
murmurhash = "1.0.7"
nltk = "3.7"
numpy = "1.22.4"
packaging = "21.3"
pandas = "1.4.2"
pathy = "0.6.1"
preshed = "3.0.6"
pydantic = "1.8.2"
pyparsing = "3.0.9"
pypdf2 = "1.28.4"
python-dateutil = "2.8.2"
pytz = "2022.1"
pyyaml = "6.0"
regex = "2022.6.2"
requests = "2.28.0"
s3transfer = "0.6.0"
scikit-learn = "1.1.1"
scipy = "1.6.1"
six = "1.16.0"
smart-open = "5.2.1"
spacy-legacy = "3.0.9"
spacy = "3.1.6"
srsly = "2.4.3"
thinc = "8.0.17"
threadpoolctl = "3.1.0"
tokenizers = "0.12.1"
torch = "1.11.0"
tqdm = "4.64.0"
transformers = "4.20.1"
typer = "0.4.1"
typing-extensions = "4.2.0"
urllib3 = "1.26.9"
wasabi = "0.9.1"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
