[tool.poetry]
name = "model_ltd"
version = "0.1.1"
description = "Model LTD"
authors = ["Teja <teja@spraoi.ai>"]
maintainers = [
    "TBD <TBD@spraoi.ai>",
]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]


[tool.poetry.dependencies]
python = "^3.8"
aiobotocore = "2.4.0"
aiohttp = "3.8.1"
aioitertools = "0.10.0"
aiosignal = "1.2.0"
async-timeout = "4.0.2"
attrs = "22.1.0"
boto3 = "1.24.59"
botocore = "1.27.59"
charset-normalizer = "2.1.1"
frozenlist = "1.3.1"
fsspec = "2022.8.2"
idna = "3.3"
jmespath = "1.0.1"
joblib = "1.1.0"
model-ltd = "0.1.1"
multidict = "6.0.2"
numpy = "1.23.2"
pandas = "1.4.4"
pip = "21.1.1"
python-dateutil = "2.8.2"
pytz = "2022.2.1"
s3fs = "2022.8.2"
s3transfer = "0.6.0"
scikit-learn = "1.1.2"
scipy = "1.6.1"
setuptools = "56.0.0"
six = "1.16.0"
threadpoolctl = "3.1.0"
typing-extensions = "4.3.0"
urllib3 = "1.26.12"
wrapt = "1.14.1"
yarl = "1.8.1"
#s3fs = "~2021.6"
#boto3 = "~1.17"
#pandas = "~1.2"
#numpy = "~1.18"
#joblib = "~0.14"
#scikit-learn = "~0.24"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
