[tool.poetry]
name = "model_ltd_segmentation"
version = "2.0.1"
description = "A longterm disability segmentation model"
authors = ["Tariq <tariqmohamed@fineos.com>"]
maintainers = [
    "Tariq <tariqmohamed@fineos.com>",
]
license = "Proprietary"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13"
torchtext = "^0.6.0"
pandas = "^2.0"
numpy = "^1.24"
joblib = "^1.3"
boto3 = "^1.29"
scikit-learn = "^1.3"
ordered_set = "^4.1.0"
pyarrow = "^14.0.1"

[tool.poetry.dev-dependencies]
pytest = '~7.3'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
