[tool.poetry]
name = "model_ner"
version = "0.1.1"
description = "Model NER"
authors = ["Teja <teja@spraoi.ai>"]
maintainers = [
    "TBD <TBD@spraoi.ai>",
]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "model_ner" }
]
include = ["model_ner/data/*"]

[tool.poetry.dependencies]
python = "^3.8"
s3fs = "~0.4.2"
boto3 = "~1.24.13"
pandas = "~1.4"
joblib = "~1.1"
spacy = "2.2.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
