[tool.poetry]
name = "model_ner"
version = "0.1.1"
description = "Model NER"
authors = ["Teja <teja@spraoi.ai>"]
maintainers = [
    "TBD <TBD@spraoi.ai>",
]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "model_ner" }
]
include = ["model_ner/data/*"]

[tool.poetry.dependencies]
python = "^3.8"
aiobotocore = "2.3.3"
aiohttp = "3.8.1"
aioitertools = "0.10.0"
aiosignal = "1.2.0"
async-timeout = "4.0.2"
attrs = "21.4.0"
blis = "0.4.1"
boto3 = "1.21.21"
botocore = "1.24.21"
certifi = "2022.6.15"
charset-normalizer = "2.0.12"
colorama = "0.4.5"
cymem = "2.0.6"
frozenlist = "1.3.0"
fsspec = "2022.5.0"
idna = "3.3"
jmespath = "1.0.1"
joblib = "1.1.0"
multidict = "6.0.2"
murmurhash = "1.0.7"
pandas = "1.4.2"
plac = "0.9.6"
preshed = "3.0.6"
python-dateutil = "2.8.2"
pytz = "2022.1"
requests = "2.28.0"
s3fs = "2022.5.0"
s3transfer = "0.5.2"
six = "1.16.0"
spacy = "2.2.0"
srsly = "1.0.5"
thinc = "7.1.1"
tqdm = "4.64.0"
typing-extensions = "4.2.0"
urllib3 = "1.26.9"
wasabi = "0.9.1"
wrapt = "1.14.1"
yarl = "1.7.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
