[tool.poetry]
name = "model_settlement"
version = "0.1.9"
description = "Model Settlement"
authors = ["Teja <teja@spraoi.ai>"]
maintainers = [
    "TBD <TBD@spraoi.ai>",
]
license = "Proprietry"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]


[tool.poetry.dependencies]
python = "~3.8"
s3fs = "2022.*"
boto3 = "~1.17"
pandas = "~1.2"
numpy = "~1.19"
joblib = "~0.14"
tensorflow = "~2.7"
scikit-learn = "~0.24"
xgboost = "~1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
