[tool.poetry]
name = "model_settlement"
version = "0.1.12"
description = "Model Settlement"
authors = ["Teja <teja@spraoi.ai>"]
maintainers = [
    "TBD <TBD@spraoi.ai>",
]
license = "Proprietry"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]


[tool.poetry.dependencies]
python = "~3.8"
s3fs = "2021.6.1"
boto3 = "1.17.106"
botocore = "1.20.106"
aiobotocore = "1.3.3"
aioitertools = "0.8.0"
onnxruntime = "~1.11"
pandas = "~1.2"
numpy = "~1.22"
joblib = "~0.14"
scikit-learn = "~0.24"
xgboost = "~1.2"
wrapt = "1.12.1"
# pin werkzeug until tensorflow is removed or Airflow is upgraded
werkzeug = "0.*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
