[tool.poetry]
name = "model_settlement"
version = "0.1.12"
description = "Model Settlement"
authors = ["Teja <teja@spraoi.ai>"]
maintainers = [
    "TBD <TBD@spraoi.ai>",
]
license = "Proprietry"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]


[tool.poetry.dependencies]
python = "~3.8"
s3fs = "2022.3.0"
s3transfer = "0.5.2"
boto3 = "1.21.21"
botocore = "1.24.21"
aiobotocore = "2.2.0"
aiohttp = "3.8.1"
aioitertools = "0.10.0"
aiosignal = "1.2.0"
async-timeout = "4.0.2"
attrs = "21.4.0"
charset-normalizer = "2.0.12"
flatbuffers = "2.0"
frozenlist = "1.3.0"
fsspec = "2022.3.0"
idna = "3.3"
jmespath = "1.0.0"
multidict = "6.0.2"
onnxruntime = "1.11.1"
pandas = "1.4.2"
numpy = "1.22.0"
joblib = "1.1.0"
protobuf = "3.20.1"
python-dateutil = "2.8.2"
pytz = "2022.1"
scikit-learn = "1.0.2"
xgboost = "1.2.1"
wrapt = "1.14.1"
six = "1.16.0"
threadpoolctl = "3.1.0"
typing-extensions = "4.2.0"
urllib3 = "1.26.9"
yarl = "1.7.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
