[tool.poetry]
name = "model_siu"
version = "0.1.0"
description = "rsli siu model"
authors = ["Tariq Mohamed <tariq.mohamed@fineos.com>"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "model_siu" }
]
include = ["model_siu/artifacts/*"]

[tool.poetry.dependencies]
python = "~3.10.2"
joblib = "~1.1"
pandas = "~1.3"
numpy = "~1.22"
scikit-learn = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
