[tool.poetry]
name = "model_siu_txn"
version = "0.1.0"
description = "model predict code"
authors = ["tariq-mohamed <Tariq.Mohamed@FINEOS.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
pandas = "^1.5.2"
lightgbm = "^3.3.3"
category-encoders = "^2.5.1"
boto3 = "^1.26.34"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
