[tool.poetry]
name = "model_std"
version = "0.1.2"
description = "Model STD"
authors = ["Teja <teja@spraoi.ai>"]
maintainers = [
    "TBD <TBD@spraoi.ai>",
]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "model_std" }
]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "~2.3"
pandas = "~1.2"
numpy = "~1.18"
joblib = "~0.14"
boto3 = "~1.17"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
