[tool.poetry]
name = "model_std"
version = "0.1.6"
description = "Model STD"
authors = ["Teja <teja@spraoi.ai>"]
maintainers = [
    "TBD <TBD@spraoi.ai>",
]
license = "Proprietory"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "model_std" }
]

[tool.poetry.dependencies]
python = "^3.8"
aiobotocore = "2.3.3"
aiohttp = "3.8.1"
aioitertools = "0.10.0"
aiosignal = "1.2.0"
async-timeout = "4.0.2"
attrs = "21.4.0"
boto3 = "1.21.21"
botocore = "1.24.21"
charset-normalizer = "2.0.12"
frozenlist = "1.3.0"
fsspec = "2022.5.0"
idna = "3.3"
jmespath = "1.0.0"
joblib = "1.1.0"
multidict = "6.0.2"
numpy = "1.22.4"
pandas = "1.4.2"
pip = "21.1.1"
python-dateutil = "2.8.2"
pytz = "2022.1"
s3fs = "2022.5.0"
s3transfer = "0.5.2"
scikit-learn = "1.1.1"
scipy = "1.6.1"
setuptools = "56.0.0"
six = "1.16.0"
threadpoolctl = "3.1.0"
typing-extensions = "4.2.0"
urllib3 = "1.26.9"
wrapt = "1.14.1"
xgboost = "1.2.1"
yarl = "1.7.2"

# Required libraries - use to update to latest versions
#pandas = "*"
#numpy = "*"
#joblib = "*"
#boto3 = "*"
#xgboost = "*"
#scikit-learn = "*"
#s3fs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
